--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="./catIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KittyGaze</title>
+    <!-- Dark and light switcher -->
+    <script>
+      // On page load or when changing themes, best to add inline in `head` to avoid FOUC
+      if (
+        localStorage.getItem("color-theme") === "dark" ||
+        (!("color-theme" in localStorage) &&
+          window.matchMedia("(prefers-color-scheme: dark)").matches)
+      ) {
+        document.documentElement.classList.add("dark");
+      } else {
+        document.documentElement.classList.remove("dark");
+      }
+    </script>
   </head>
-  <body>
+  <body
+    class="bg-white border-r border-gray-200 dark:bg-gray-800 dark:border-gray-700"
+  >
     <div id="app"></div>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
